@@ -44,7 +44,8 @@
 #                        pause is only valid for the second entry.
 #                      Possible values: lowest, lower, normal, higher, highest, pause.
 #        mapperfile: File used to load/save the key/event mappings from. Resetmapper only works with the default value.
-#   mapperfile_sdl2: File used to load/save the key/event mappings from (SDL2 builds). Resetmapper only works with the default value.
+#DOSBOX-X-ADV:#   mapperfile_sdl1: File used to load/save the key/event mappings from DOSBox-X SDL1 builds. If set it will override "mapperfile" for SDL1 builds.
+#DOSBOX-X-ADV:#   mapperfile_sdl2: File used to load/save the key/event mappings from DOSBox-X SDL2 builds. If set it will override "mapperfile" for SDL2 builds.
 #      usescancodes: Avoid usage of symkeys, might not work on all operating systems.
 #                      If set to "auto" (default), it is enabled for SDL1 and non-US keyboards.
 #                      Possible values: true, false, auto.
@@ -67,8 +68,9 @@ mouse_emulation   = locked
 mouse_wheel_key   = -1
 waitonerror       = true
 priority          = higher,normal
-mapperfile        = mapper-dosbox-x.sdl1.map
-mapperfile_sdl2   = mapper-dosbox-x.sdl2.map
+mapperfile        = mapper-dosbox-x.map
+#DOSBOX-X-ADV:mapperfile_sdl1   = 
+#DOSBOX-X-ADV:mapperfile_sdl2   = 
 usescancodes      = auto
 #DOSBOX-X-ADV:overscan          = 0
 titlebar          = 
@@ -1427,7 +1429,7 @@ ps1audiorate                           = 22050
 #                  fcs (Thrustmaster), ch (CH Flightstick).
 #                  none disables joystick emulation.
 #                  auto chooses emulation depending on real joystick(s).
-#                  (Remember to reset dosbox's mapperfile if you saved it earlier)
+#                  (Remember to reset DOSBox-X's mapperfile if you saved it earlier)
 #                  Possible values: auto, 2axis, 4axis, 4axis_2, fcs, ch, none.
 #         timed: enable timed intervals for axis. Experiment with this option, if your joystick drifts (away).
 #      autofire: continuously fires as long as you keep the button pressed.
